@@ -22,6 +22,7 @@ VP 9.1.6 Changelog
 - add static rendering feature to primitives: if you set the 'Static Rendering' option, the primitive will be pre-rendered and you can't change any parameters from within the script. This is
   helpful if you want to use 3D meshes for posts or toys which won't be animated at all.
 - add lightmap for lights: If option "'On Image' Is Lightmap" is checked you can define a lightmap for the on image. If the light is switched on the lightmap is rendered together with the off image.
+- add sphere mapping to 3D mesh primitives
 
 VP 9.1.5 Changelog
 ------------------------
